2009-02-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Basic support for glob-style pattern definitions within the 
	hostname --> sshlogin mapping.
	(CR #20, http://www.openvas.org/openvas-cr-20.html)
	
	* openvasd/attack.c (is_pattern): New, copied from clients
	nvt_pref_sshlogin, TRUE if string contains '*' or '?'.
	
	* openvasd/attack.c (pattern_matches): New, GHashTable- find- predicate.
	
	* openvasd/attack.c (fill_host_kb_ssh_credentials): Now tries if any
	pattern matches the hostname before falling back to Default login.

2009-02-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactoring and documentation in attack.c. Minor formatting changes.
	In preparation of pattern definitions for hostname --> sshlogin mapping.
	(CR #20, http://www.openvas.org/openvas-cr-20.html)
	
	* openvasd/attack.c (attack_init_hostinfos): Documented.
	
	* openvasd/attack.c (fill_host_kb_ssh_credentials): New, extracted from
	init_host_kb.
	
	* openvasd/attack.c (init_host_kb): Adjusted to call new method
	fill_host_kb_ssh_credentials.
	
	* openvasd/attack.c (attack_host): Minor formatting changes.
	
2009-02-02  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Cosmetics in the rules module.

	* openvasd/rules.h: Documentation and formatting of rules struct.
	
	* openvasd/rules.c (rules_get_fname): Removed unneeded forward decl.
	Documentation, K&R func decl. replaced.
	
	* openvasd/rules.c (get_host_rules): K&R func decl. replaced.,
	indentation.
	
	* openvasd/rules.c (rules_free): K&R func decl. replaced.

2009-01-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/pluginload.c (collect_nvts): Fixed a bug: Now
	subdir paths are correctly assembled and stored.

2009-01-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Introduce a new collection method for NVTs in the
	plugins folder. Now, it is recursed into subdirectories.
	As a side effect, the counting of NVTs is ow fixed: The correct